# KuLo

./: AGENT.md  README.md  pyproject.toml
docs/: idea.md
scripts/: build.py  setup_demo.py
src/: __init__.py  client.py  main.py
src/kulo/: __init__.py  app.py  client.py  main.py  manager.py  models.py  screens.py  state.py  ui.py  utils.py
src/kulo/modals/: __init__.py  confirm_modal.py  filter_modal.py  namespace_modal.py
src/kulo/widgets/: __init__.py  help_bar.py  log_panel.py  pod_legend.py
tests/: __init__.py  conftest.py  test_e2e.py  test_tui.py  test_unit.py
